[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/rough_planet.png" type="Texture" id=1]
[ext_resource path="res://Planet.gd" type="Script" id=2]
[ext_resource path="res://GravityWell.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 69.381

[sub_resource type="CircleShape2D" id=2]

[node name="Planet" type="RigidBody2D"]
mode = 1
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 5, 5 )
texture = ExtResource( 1 )

[node name="SurfaceCollision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="GravityWell" type="Area2D" parent="."]
space_override = 1
gravity_point = true
script = ExtResource( 3 )

[node name="GravityWellCollision" type="CollisionShape2D" parent="GravityWell"]
shape = SubResource( 2 )
[connection signal="body_entered" from="GravityWell" to="GravityWell" method="_on_GravityWell_body_entered"]
[connection signal="body_exited" from="GravityWell" to="GravityWell" method="_on_GravityWell_body_exited"]
